Result processing api
